feat: complete backend refactoring - domain structure, auth, cart, orders with user-based security